Modify ScheduleController and README